Add more tech stack details + add first 3 term goals

--- a/Camis.html
+++ b/Camis.html
@@ -61,7 +61,15 @@
 
     <section class="resume-section work-term p-3 p-lg-5 d-flex justify-content-center" id="camis-work-term">
       <div class="w-100">
-          <h2 class="mb-5">Camis Work Term<h2>
+          <h2 class="mb-5">Camis Work Term</h2>
+              <p>This was my third and last work term, starting in Janurary and going 8 months until August.
+              This work term was notable for being entirely virtual despite the company's Guelph office - I did all
+              all of my work working from home.</p>
+              <p>Camis provides parks and campground software for different parks and natural resource organizations
+              in both Canada and the United States. They are a 'full solution' provider - providing the public-facing
+              reservation website, the in-park management and analytics software suite, and any hardware or resources needed
+              to support these applications, including call-center support.</p>
+              <p>Their application was very much fu</p>
       </div>
 
     </section>
@@ -71,6 +79,12 @@
     <section class="resume-section work-term p-3 p-lg-5 d-flex justify-content-center" id="tech">
       <div class ="w-100">
         <h2 class="mb-5">Tech Stack</h2>
+        <p>The codebase itself supports two separate applications - a reservation website that customers
+        can use to book campsites and rent/buy park supplies, and Windows desktop application that acts as
+        the "in-park" application for park staff - facilitating bookings, sales and park telemetry.</p>
+        <p>The in-park application was .NET  - a WPF frontend interface (with XAML pages) with business logic
+        written in C#, and relational SQL Server backend. The reservation website also had a .NET backend, but used
+        Angular for the frontend UI.</p>
         </div>
     </section>
 
@@ -78,6 +92,11 @@
     <section class="resume-section work-term p-3 p-lg-5 d-flex justify-content-center" id="challenges">
       <div class="w-100">
         <h2 class="mb-5">Challenges</h2>
+        <p>An immediate challenge at the start of the work term was adjusting to working and interacting with
+        my team completely online. My immediate concern was onboarding and getting my development environment set up - In
+        previous co-ops my experience was that getting set up could be a hard process that greatly benefitted from the institutional
+        knowledge that a team could provide, which could be harder in an online environment.</p>
+
       </div>
 
     </section>
@@ -88,13 +107,13 @@
       <div class="w-100">
         <h2 class="mb-5">Goals</h2>
         <div class="goalAnswer">
-          <h4><i>Goal 1:</i> <b></b> </h4>
+          <h4><i>Goal 1:</i> <b>Write an SQL query or database-interaction part of the application.</b> </h4>
          </div>
         <div class="goalAnswer">
-          <h4><i>Goal 2:</i> <b></b></h4>
+          <h4><i>Goal 2:</i> <b>Write/help design a UI element of the application</b></h4>
           </div>
         <div class="goalAnswer">
-          <h4><i>Goal 3:</i> <b></b></h4>
+          <h4><i>Goal 3:</i> <b>Update a component of the application to have full test coverage</b></h4>
         </div>
         <div class="goalAnswer">
         </div>
