More Camis work term details + 2 new goals added (tech stack section WIP)

--- a/Camis.html
+++ b/Camis.html
@@ -93,6 +93,7 @@
         written in C#, and relational SQL Server backend. The reservation website also had a .NET backend, but used
         Angular for the frontend UI.</p>
         <p>The Camis codebase adhered to Clean Code architecture principles, which (TODO: explain Clean architecture) </p>
+        <p>I found C# to be very similar to Java in many ways, and overall was a very nice language to work in - </p>
         </div>
     </section>
 
@@ -109,7 +110,9 @@
         tools like Jira I was already familiar with, and I had more experience in troubleshooting the setup process and asking the right questions than I did
         at my first work term.</p>
         <p>A separate challenge that was present throughout the work term was keeping up to date on the status of other developers on your team and the status of what they were working on. 
-          
+          There is much less opportunity to 'overhear' conversations between other developers or get information on the progress of work indirectly
+          - you have to use direct methods, such as standup meetings or directly asking a developer to get information on a ticket's progress. 
+
         </p>
       </div>
 
@@ -126,6 +129,9 @@
           In previous work terms the development teams I was on did not regularly interact with the application database - that
           was something that had already been established by the time I joined the team. At Camis dev teams are able to write SQL stored
           procedures when building features, so I wanted to capitalize on the opportunity to get some experience working with databases.</p>
+          <p>While I did do some work importing scrub databases and querying some application data, I wasn't able to find the opportunity to write SQL
+            stored procedures of my own - I was not completely surprised though as the application was in a state where the database logic was mostly complete.
+          </p>
          </div>
         <div class="goalAnswer">
           <h4><i>Goal 2:</i> <b>Write/help design a UI element of the application</b></h4>
@@ -135,16 +141,22 @@
           integration that would embed Google Maps into the reservation website, and I helped to build the embedded Angular component. Angular is (something)</p>
           <p>On the desktop side I worked on a number of components in WPF (Windows Presentation Foundation) - this used XAML files as the UI markup, paired with C# classes that linked UI
             actions (eg. Button presses, dropdown selections) to the business logic. XAML is not altogether too different from HTML, in that both are XML-based markup languages. One difference
-            is that you can design custom components (similar to frameworks like React and Angular) and use those within your other XAML files. </p>
+            is that you can design custom components (similar to frameworks like React and Angular) and use those within your other XAML files.</p>
+          <p>By the end of the first half of the work term I considered this goal complete - I had experience in building UI component for both the web and for
+            native Windows applications.</p>
           </div>
         <div class="goalAnswer">
           <h4><i>Goal 3:</i> <b>Update a component of the application to have full test coverage</b></h4>
           <p>I made this goal at the start of the work term, once I had some understanding of the codebase's testing structure. Camis has unit tests for individual code components,
-          integration tests for groups of components that perform certain business logic, and end-to-end tests for some main reservation workflows (mainly on the website side). I wanted to have a practical goal to accomplish in this test environment - writing a full test suite from scratch was unlikely considering the mature position of the current test setup, so I thought achieving full test coverage would be attainable, useful for me as work experience and useful for Camis in improving their test quality.</p>
+          integration tests for groups of components that perform certain business logic, and end-to-end tests for some main reservation workflows (mainly on the website side). I wanted to have a practical goal to accomplish in this test environment - writing a full 
+          test suite from scratch was unlikely considering the mature position of the current test setup,
+          so I thought achieving full test coverage would be attainable, useful for me as work experience and useful for Camis in improving their test quality.</p>
         </div>
         <div class="goalAnswer">
+          <h4><i>Goal 4:</i> Take an active role in collecting/analyzing application performance metrics</h4>
         </div>
         <div class="goalAnswer">
+          <h4><i>Goal 5:</i> Improve pair-programming practices within the team (?)</h4>
         </div>
       </div>
     </section>
