Add link to Camis report in Experience section on main page

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Jacob
+        <h2 class="mb-0">Jacob
           <span class="text-primary">Haig</span>
-        </h1>
+        </h2>
         <div class="subheading mb-5">Guelph, ON · 
           <a href="mailto:jhaig343@gmail.com">jhaig343@gmail.com</a>
         </div>
@@ -105,28 +105,29 @@
           <div class="resume-content">
             <h3 class="mb-0">Programmer/Analyst</h3>
             <div class="subheading mb-3">School of Computer Science - University of Guelph</div>
-            <!-- TODO: Image -->
             <img class="img-fluid mx-auto mb-2" src="./img/SOCS.png" alt=""/>
             <p>My second co-op term, working entirely remote for the School of Computer Science.</p>
             <a href="./UoGuelph.html" class="subheading mb-3">More</a>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2020 - Present</span>
+            <span class="text-primary">June 2020 - August 2020</span>
           </div> 
         </div>
         
-        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">Software Developer Co-op</h3>
+            <div class="subheading mb-3">Camis Inc.</div>
+            <img class="img-fluid mx-auto mb-2" src="./img/camis.png" alt=""/>
+            <p>My third and final co-op term, working remotely for Camis for an 8-month period.</p>
+            <a href="./UoGuelph.html" class="subheading mb-3">More</a>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">January 2021 - August 2021</span>
           </div>
         </div>
 
-        -->
+       
 
       </div>
 
