Fix bad report link

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="subheading mb-3">Camis Inc.</div>
             <img class="img-fluid mx-auto mb-2" src="./img/camis.png" alt=""/>
             <p>My third and final co-op term, working remotely for Camis for an 8-month period.</p>
-            <a href="./UoGuelph.html" class="subheading mb-3">More</a>
+            <a href="./Camis.html" class="subheading mb-3">More</a>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2021 - August 2021</span>
