Remove clean code line until I know what to write there

--- a/Camis.html
+++ b/Camis.html
@@ -92,7 +92,7 @@
         <p>The in-park application was .NET  - a WPF frontend interface (with XAML pages) with business logic
         written in C#, and relational SQL Server backend. The reservation website also had a .NET backend, but used
         Angular for the frontend UI.</p>
-        <p>The Camis codebase adhered to Clean Code architecture principles, which (TODO: explain Clean architecture) </p>
+        <!-- <p>The Camis codebase adhered to Clean Code architecture principles, which (TODO: explain Clean architecture) </p> -->
         <p>I found C# to be very similar to Java in many ways, and overall was a very nice language to work in - I found some language features like 
         LINQ queries to be really natural and easy to use.</p>
         </div>
